--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - ./conf.d:/etc/nginx/conf.d
+      - /etc/letsencrypt/live/vibetalk.watchvaultbydiggie.com/fullchain.pem:/etc/nginx/ssl/fullchain.pem
+      - /etc/letsencrypt/live/vibetalk.watchvaultbydiggie.com/privkey.pem:/etc/nginx/ssl/privkey.pem
   web:
     image: htetlinmaung/vibetalk
     restart: always
