--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,41 @@
-server {
-    listen 80;
-    server_name your_domain.com www.your_domain.com;
+user  nginx;
+worker_processes  auto;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+
+events {
+    worker_connections  65000;
+}
+
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    client_max_body_size 1000M;
+    proxy_read_timeout 3600;
+    proxy_connect_timeout 3600;
+    proxy_send_timeout 3600;
+
+    proxy_buffering off;
+    proxy_buffer_size 16k;
+    proxy_busy_buffers_size 24k;
+    proxy_buffers 64 4k;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
 }
