--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -18,4 +18,12 @@ server {
         proxy_ssl_protocols TLSv1 TLSv1.1 TLSv1.2;  # Specify SSL protocols
         proxy_ssl_ciphers HIGH:!aNULL:!MD5;  # Specify SSL ciphers
     }
+
+    location / {
+        proxy_pass http://150.95.82.125:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
